# bevy_demo_2048

./: Cargo.toml  README.md  index.html
.github/workflows/: github-pages.yaml
src/: config.rs  game_rule.rs  main.rs
