[package]
name = "bevy2048"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
console_error_panic_hook = "0.1"
bevy-inspector-egui = "0.18.3"

[dependencies.bevy]
version = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 's'
lto = true

